--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <link rel="stylesheet" href="/css/stylesheet.css">
-    <title>Kumstens Zoo</title>
+    <title>Sten Zoo</title>
 </head>
 <body>
 <div id="grid_wrapper"> 
     <header>
-        <h1> Sten Zoo </h1>
+        <h1>Sten Zoo</h1>
     </header>
 
     <nav id="nav"> 
-        <a href="https://www.y8.com/" target="_blank"> Besök oss</a> 
-        <a href="https://www.y8.com/" target="_blank"> Priser & Biljetter</a> 
-        <a href="https://www.y8.com/" target="_blank"> Mat & Dryck</a> 
+        <a href="http://127.0.0.1:5500/index2.html" target="_blank" id="link"> Besök oss</a> 
+        <a href="https://www.y8.com/" target="_blank" id="link"> Priser & Biljetter</a> 
+        <a href="https://www.y8.com/" target="_blank" id="link"> Mat & Dryck</a> 
     </nav>
 
     <section id="section_1"> 
@@ -29,7 +29,13 @@
     </section>
         
     <footer>
-        <h2> Sidfot </h2>
+        <p> Stiftelsen Sten Zoo</p>
+        <p> 456 784 Johanneberg</p>
+        <p> Org.nr: 674400-5546</p>
+        <a href="inget" id="Kontakta_oss"> Kontakta oss</a>
+        <p>Telefon.nr: 073-045-435</p>
+        
+
     </footer>
 </div>
 </body>
