Garanterat färdig hemsida

--- a/resturang.html
+++ b/resturang.html
@@ -35,19 +35,19 @@
                 </header>
                 <div id="mat">
                     <div class="mat_ratter">
-                        <h7>Stekt örtkryddat vitlöksbröd................... 10000kr</h7>
+                        <h7>Stekt örtkryddat vitlöksbröd........10000kr</h7>
                         <p id="mat_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime voluptatem sapiente eum soluta, consequuntur similique nisi vero ex nostrum libero.</p>
                     </div>
                     <div class="mat_ratter">
-                        <h7>Nachotallrik............................................ 10000kr</h7>
+                        <h7>Nachotallrik................................ 10000kr</h7>
                         <p id="mat_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime voluptatem sapiente eum soluta, consequuntur similique nisi vero ex nostrum libero.</p>
                     </div>
                     <div class="mat_ratter">
-                        <h7>Dirty fries............................................... 10000kr</h7>
+                        <h7>Dirty fries....................................10000kr</h7>
                         <p id="mat_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime voluptatem sapiente eum soluta, consequuntur similique nisi vero ex nostrum libero.</p>
                     </div>
                     <div class="mat_ratter">
-                        <h7>Friterade kycklingvingar........................ 10000kr</h7>
+                        <h7>Friterade kycklingvingar............ 10000kr</h7>
                         <p id="mat_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime voluptatem sapiente eum soluta, consequuntur similique nisi vero ex nostrum libero. </p>
                     </div>
                 </div>
@@ -61,19 +61,19 @@
                 </header>
                 <div id="mat">
                     <div class="mat_ratter">
-                        <h7>Grillad Entrocote.................................... 10000kr</h7>
+                        <h7>Grillad Entrocote.......................... 10000kr</h7>
                         <p id="mat_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime voluptatem sapiente eum soluta, consequuntur similique nisi vero ex nostrum libero.</p>
                     </div>
                     <div class="mat_ratter">
-                        <h7>Fish & Chips.......................................... 10000kr</h7>
+                        <h7>Fish & Chips.................................10000kr</h7>
                         <p id="mat_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime voluptatem sapiente eum soluta, consequuntur similique nisi vero ex nostrum libero.</p>
                     </div>
                     <div class="mat_ratter">
-                        <h7>Högrevsburgare...................................... 10000kr</h7>
+                        <h7>Högrevsburgare........................... 10000kr</h7>
                         <p id="mat_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime voluptatem sapiente eum soluta, consequuntur similique nisi vero ex nostrum libero.</p>
                     </div>
                     <div class="mat_ratter">
-                        <h7>Sparris-Risotto....................................... 10000kr</h7>
+                        <h7>Sparris-Risotto............................. 10000kr</h7>
                         <p id="mat_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime voluptatem sapiente eum soluta, consequuntur similique nisi vero ex nostrum libero.</p>
                     </div>
                 </div>
@@ -87,19 +87,19 @@
                 </header>
                 <div id="mat">
                     <div class="mat_ratter">
-                        <h7>Marängsviss med vaniljglass................. 10000kr</h7>
+                        <h7>Marängsviss med vaniljglass...... 10000kr</h7>
                         <p id="mat_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime voluptatem sapiente eum soluta, consequuntur similique nisi vero ex nostrum libero.</p>
                     </div>
                     <div class="mat_ratter">
-                        <h7>Vaniljglass............................................. 10000kr</h7>
+                        <h7>Vaniljglass................................. 10000kr</h7>
                         <p id="mat_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime voluptatem sapiente eum soluta, consequuntur similique nisi vero ex nostrum libero.</p>
                     </div>
                     <div class="mat_ratter">
-                        <h7>Kladdkaka............................................. 10000kr</h7>
+                        <h7>Kladdkaka.................................. 10000kr</h7>
                         <p id="mat_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime voluptatem sapiente eum soluta, consequuntur similique nisi vero ex nostrum libero.</p>
                     </div>
                     <div class="mat_ratter">
-                        <h7>Varm Äpplepaj...................................... 10000kr</h7>
+                        <h7>Varm Äpplepaj............................10000kr</h7>
                         <p id="mat_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime voluptatem sapiente eum soluta, consequuntur similique nisi vero ex nostrum libero.</p>
                     </div>
                 </div>
@@ -113,19 +113,19 @@
                 </header>
                 <div id="mat">
                     <div class="mat_ratter">
-                        <h7>Kalvköttbullar....................................... 10000kr</h7>
+                        <h7>Kalvköttbullar............................ 10000kr</h7>
                         <p id="mat_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime voluptatem sapiente eum soluta, consequuntur similique nisi vero ex nostrum libero.</p>
                     </div>
                     <div class="mat_ratter">
-                        <h7>Hamburgare.......................................... 10000kr</h7>
+                        <h7>Hamburgare................................10000kr</h7>
                         <p id="mat_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime voluptatem sapiente eum soluta, consequuntur similique nisi vero ex nostrum libero.</p>
                     </div>
                     <div class="mat_ratter">
-                        <h7>Hemmagjorda pannkakorHamburgare......................... 10000kr</h7>
+                        <h7>Hemmagjorda pannkakorHamburgare............. 10000kr</h7>
                         <p id="mat_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime voluptatem sapiente eum soluta, consequuntur similique nisi vero ex nostrum libero.</p>
                     </div>
                     <div class="mat_ratter">
-                        <h7>Barn pizza margarita............................ 10000kr</h7>
+                        <h7>Barn pizza margarita................. 10000kr</h7>
                         <p id="mat_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime voluptatem sapiente eum soluta, consequuntur similique nisi vero ex nostrum libero.</p>
                     </div>
                 </div>
@@ -139,19 +139,19 @@
                 </header>
                 <div id="mat">
                     <div class="mat_ratter">
-                        <h7>Coca-Cola............................................... 10000kr</h7>
+                        <h7>Coca-Cola.................................... 10000kr</h7>
                         <p id="mat_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime voluptatem sapiente eum soluta, consequuntur similique nisi vero ex nostrum libero. </p>
                     </div>
                     <div class="mat_ratter">
-                        <h7>Pepsi-max............................................. 10000kr</h7>
+                        <h7>Pepsi-max................................... 10000kr</h7>
                         <p id="mat_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime voluptatem sapiente eum soluta, consequuntur similique nisi vero ex nostrum libero.</p>
                     </div>
                     <div class="mat_ratter">
-                        <h7>Sprite...................................................... 10000kr</h7>
+                        <h7>Sprite........................................... 10000kr</h7>
                         <p id="mat_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime voluptatem sapiente eum soluta, consequuntur similique nisi vero ex nostrum libero.</p>
                     </div>
                     <div class="mat_ratter">
-                        <h7>Fanta..................................................... 10000kr</h7>
+                        <h7>Fanta........................................... 10000kr</h7>
                         <p id="mat_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime voluptatem sapiente eum soluta, consequuntur similique nisi vero ex nostrum libero.</p>
                     </div>
                 </div>
