--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
                 <article id="oppetider_ruta">
                     <h3 class="rubriker"> Öppetider</h3>
                     <h4>Mån - 10:00 - 18:00</h4>
-                    <h4>Tue - 10:00 - 18:00</h4>
+                    <h4>Tis - 10:00 - 18:00</h4>
                     <h4>Ons - 10:00 - 18:00</h4>
                     <h4>Tor - 10:00 - 19:00</h4>
-                    <h4>Fri - 10:00 - 20:00</h4>
-                    <h4>Sat - 10:00 - 17:00</h4>
-                    <h4>Sun - 10:00 - 17:00</h4>
+                    <h4>Fre - 10:00 - 20:00</h4>
+                    <h4>Lör - 10:00 - 17:00</h4>
+                    <h4>Sön - 10:00 - 17:00</h4>
                 </article>
 
                 <div id="information_rutor">
