--- a/resturang.html
+++ b/resturang.html
@@ -121,7 +121,7 @@
                         <p id="mat_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime voluptatem sapiente eum soluta, consequuntur similique nisi vero ex nostrum libero.</p>
                     </div>
                     <div class="mat_ratter">
-                        <h7>Hemmagjorda pannkakorHamburgare............. 10000kr</h7>
+                        <h7>Hemmagjorda pannkakor............. 10000kr</h7>
                         <p id="mat_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime voluptatem sapiente eum soluta, consequuntur similique nisi vero ex nostrum libero.</p>
                     </div>
                     <div class="mat_ratter">
